--- a/public/chat.css
+++ b/public/chat.css
@@ -1,22 +1,61 @@
+.chat-list {
+  max-height: 600px;
+  overflow-y: auto;
+  border-right: 1px solid #ddd;
+  padding-right: 15px;
+}
+
+.chat-room {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  max-height: 600px;
+  display: flex;
+  flex-direction: column;
+}
+
 .chat-content {
-    height: 450px;
-    overflow-y: scroll;
-    padding: 10px;
-  }
-  .chat-content li {
-    margin-top: 10px;
-  }
-  .text-small {
-    font-size: 12px;
-    color: gray;
-    margin-bottom: 0;
-  }
-  .chat-box {
-    background: #eee;
-    padding: 5px;
-    border-radius: 5px;
-    float: left;
-  }
-  .mine {
-    float: right;
-  }
+  flex-grow: 1;
+  overflow-y: auto;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-content li {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.chat-box {
+  background: #f1f1f1;
+  padding: 10px;
+  border-radius: 10px;
+  max-width: 75%;
+  word-wrap: break-word;
+  display: inline-block;
+  position: relative;
+}
+
+.mine {
+  background: #d1e7dd;
+  margin-left: auto;
+}
+
+.chat-box time {
+  display: block;
+  font-size: 0.8em;
+  color: #888;
+  text-align: right;
+  margin-top: 5px;
+}
+
+.input-group {
+  margin-top: auto;
+}
+
+.delete-chat {
+  color: red;
+  cursor: pointer;
+  font-size: 1.5em;
+}
